fix bugs - add code

--- a/ChipLayout_Part2/app/src/main/res/layout/activity_main.xml
+++ b/ChipLayout_Part2/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:text="Get Input Data" />
+
+    <TextView
+        android:id="@+id/input_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
 </LinearLayout>
