--- a/ChipLayout_Part2/app/src/main/res/layout/item_contact.xml
+++ b/ChipLayout_Part2/app/src/main/res/layout/item_contact.xml
@@ -8,6 +8,7 @@
     <ImageView
         android:id="@+id/icon"
         android:src="@drawable/male"
+        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
